--- a/publications.html
+++ b/publications.html
@@ -63,36 +63,37 @@
 		Adaptive Deformable Convolutional Network.<br>
 		<i><b>Neurocomputing</i></b>, accepted, 2020. (JCR Q1) <br>
 		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S092523122031359X" target="_blank">paper</a> ]           			
- </p></li>
+                       </p></li>
 		       <li><p>
                Guangwei Gao, Dong Zhu, Huimin Lu, Yi Yu, Heyou Chang, Dong Yue.<br>
 	       Robust Facial Image Super-Resolution by Kernel Locality-Constrained Coupled-Layer Regression.<br>
 	       <i>ACM Transactions on Internet Technology (<b>TOIT</b>)</i>, accepted, 2020. (JCR Q1, CCF B) <br>
 	       [ paper] 		  
-</p></li>	
+                       </p></li>	
 			<li><p>
 		Guangwei Gao, Yi Yu, Jin Xie, Jian Yang, Meng Yang, Jian Zhang.<br> 
 		Constructing multilayer locality-constrained matrix regression framework for noise robust face super-resolution.<br>
 		<i>Pattern Recognition (<b>PR</b>)</i>, https://doi.org/10.1016/j.patcog.2020.107539, 2020. (JCR Q1, CCF B)<br>
       		[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S0031320320303423" target="_blank">paper</a> ]           			
- </p></li>	
+                        </p></li>	
 	  		<li><p>
                 Guangwei Gao, Yi Yu, Meng Yang, Heyou Chang, Pu Huang, Dong Yue.<br>
 		Cross-resolution face recognition with pose variations via multilayer locality-constrained structural orthogonal procrustes regression.<br>
 		<i>Information Sciences (<b>IS</b>)</i>, 506: 19-36 (2020). (JCR Q1, CCF B)<br>
                 [ <a href="https://www.sciencedirect.com/science/article/pii/S0020025519307303" target="_blank">paper</a> ]           			
- </p></li>	
+                        </p></li>	
 			<li><p>
                 Guangwei Gao, Yi Yu, Meng Yang, Pu Huang, Qi Ge, Dong Yue.<br>
 		Multi-scale patch based representation feature learning for low-resolution face recognition.<br> 
 		<i>Applied Soft Computing (<b>ASOC</b>)</i>, 90: 106183, 2020. (JCR Q1) <br>
             	[ <a href="https://www.sciencedirect.com/science/article/abs/pii/S156849462030123X" target="_blank">paper</a> ]           			
- </p></li>	
+                       </p></li>	
                         li><p>
    		Guangwei Gao, Dong Zhu, Meng Yang, Huimin Lu, Wankou Yang, Hao Gao.<br>
 		Face Image Super Resolution with Pose via Nuclear Norm Regularized Structural Orthogonal Procrustes Regression.<br>
-		<i>Neural Computing and Applications (<b>NCAA</b>)<i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
+		<i>Neural Computing and Applications (<b>NCAA</b>)</i>, 32(9): 4361-4371, 2020. (JCR Q1)<br>
 		[ <a href="https://link.springer.com/article/10.1007/s00521-018-3826-1" target="_blank">paper</a> ]
+                      
 			<li><p>
 		Guangwei Gao, Jian Yang, Zhihui Lai, Pu Huang, Jiejin Jiang, Hao Gao and Dong Yue, "Nuclear norm regularized coding with local position-patch and nonlocal similarity for face hallucination", Digital Signal Processing, Vol. 64,pp.107-120, 2017. (SCI, IF = 2.871, JCR Q1)<br>
 			
@@ -103,6 +104,7 @@
 			
         </ol>
     </div>
+				
             <!-- 2019 -->
 
     <div>
